tests/baselines/reference/switchCaseCircularRefeference(strict=true).errors.txt
switchCaseCircularRefeference.ts(3,24): error TS7008: Member 'b' implicitly has an 'any' type.
switchCaseCircularRefeference.ts(3,38): error TS7008: Member 'e' implicitly has an 'any' type.
switchCaseCircularRefeference.ts(5,10): error TS2678: Type '{ a: "A"; b: any; } | { a: "C"; e: any; }' is not comparable to type '"A" | "C"'.
  Type '{ a: "C"; e: any; }' is not comparable to type '"A" | "C"'.


==== switchCaseCircularRefeference.ts (3 errors) ====
    // Repro from #9507
    
    function f(x: {a: "A", b} | {a: "C", e}) {
                           ~
!!! error TS7008: Member 'b' implicitly has an 'any' type.
                                         ~
!!! error TS7008: Member 'e' implicitly has an 'any' type.
        switch (x.a) {
        case x:
             ~
!!! error TS2678: Type '{ a: "A"; b: any; } | { a: "C"; e: any; }' is not comparable to type '"A" | "C"'.
!!! error TS2678:   Type '{ a: "C"; e: any; }' is not comparable to type '"A" | "C"'.
            break;
        }
    }